--- a/client/styles.scss
+++ b/client/styles.scss
@@ -70,6 +70,7 @@ p {
   grid-row: 2;
   grid-column: 2;
   white-space: pre-line;
+  overflow: auto;
 }
 
 .InterviewerPanelContainer {
@@ -77,6 +78,25 @@ p {
   height: ($room-component-height + $padding) * 2 + .7rem;
   grid-row: 2 / span 2;
   grid-column: 4;
+  display: grid;
+  grid-template-rows: 1.5rem 1fr 6fr 1.5rem;
+  grid-template-columns: 1fr;
+
+  .InterviewerNavBar {
+    grid-row: 1;
+  }
+
+  textarea:nth-child(0) {
+    grid-row: 2;
+  }
+
+  textarea:nth-child(1) {
+    grid-row: 3;
+  }
+
+  .InterviewerControlPanel {
+    grid-row: 4;
+  }
 }
 
 .TextEditor {
