--- a/client/styles.scss
+++ b/client/styles.scss
@@ -56,13 +56,44 @@ p {
   justify-items: center;
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2rem 1fr 1fr;
+  grid-template-rows: 3rem 1fr 1fr;
   grid-gap: .3rem;
 }
 
 .HeaderContainer {
   grid-row: 1;
-  grid-column: 2 / span 2;
+  grid-column: 1 / span 5;
+  width: 100%;
+  height: 3rem;
+  border-bottom: .1rem solid #000;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+
+  h3 {
+    padding: 0;
+  }
+
+  .Logo {
+    grid-column: 1;
+  }
+
+  .Time {
+    grid-column: 3;
+  }
+
+  form {
+    grid-column: 4;
+  }
+
+  .CreateRoomBtn {
+    grid-column: 5;
+  }
+
+  .RoomName {
+    grid-column: 5;
+  }
 }
 
 .PromptContainer {
