--- a/client/styles.scss
+++ b/client/styles.scss
@@ -7,15 +7,16 @@ $dark-mode-bg1: #202124;
 $dark-mode-bg2: #1e1e1e;
 $dark-mode-border: #b9b9b9;
 
-$light-mode-text: #000;
-$light-mode-bg: #fff;
-$light-mode-border: #000000;
+$light-mode-text: #212121;
+$light-mode-bg: #fafafa;
+$light-mode-block: #fff;
+$light-mode-border: #eeeeee;
 
 $text-color: $light-mode-text;
 $bg-color: $light-mode-bg;
-$border: .1rem solid $light-mode-border;
+$border: 0.1rem solid $light-mode-border;
 
-$border-radius: .2rem;
+$border-radius: 0.2rem;
 $padding: 1rem;
 $room-component-width: 22rem;
 $room-component-height: 15rem;
@@ -26,7 +27,12 @@ body {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: $text-color;
   background-color: $bg-color;
   padding-bottom: $padding;
@@ -57,7 +63,7 @@ p {
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 3rem 1fr 1fr;
-  grid-gap: .3rem;
+  grid-gap: 0.3rem;
 }
 
 .HeaderContainer {
@@ -71,12 +77,24 @@ p {
   align-items: center;
   justify-items: center;
 
-  h3 { padding: 0; }
-  .Logo { grid-column: 1; }
-  .Time { grid-column: 3; }
-  form { grid-column: 4; }
-  .CreateRoomBtn { grid-column: 5; }
-  .RoomName { grid-column: 5; }
+  h3 {
+    padding: 0;
+  }
+  .Logo {
+    grid-column: 1;
+  }
+  .Time {
+    grid-column: 3;
+  }
+  form {
+    grid-column: 4;
+  }
+  .CreateRoomBtn {
+    grid-column: 5;
+  }
+  .RoomName {
+    grid-column: 5;
+  }
 }
 
 .PromptContainer {
@@ -89,17 +107,25 @@ p {
 
 .InterviewerPanelContainer {
   @extend %room-component;
-  height: ($room-component-height + $padding) * 2 + .7rem;
+  height: ($room-component-height + $padding) * 2 + 0.7rem;
   grid-row: 2 / span 2;
   grid-column: 4;
   display: grid;
   grid-template-rows: 1.5rem 1fr 6fr 1.5rem;
   grid-template-columns: 1fr;
 
-  .InterviewerNavBar { grid-row: 1; }
-  textarea:nth-child(0) { grid-row: 2; }
-  textarea:nth-child(1) { grid-row: 3; }
-  .InterviewerControlPanel { grid-row: 4; }
+  .InterviewerNavBar {
+    grid-row: 1;
+  }
+  textarea:nth-child(0) {
+    grid-row: 2;
+  }
+  textarea:nth-child(1) {
+    grid-row: 3;
+  }
+  .InterviewerControlPanel {
+    grid-row: 4;
+  }
 }
 
 .TextEditor {
@@ -112,8 +138,8 @@ p {
   grid-row: 3;
   grid-column: 3;
   display: grid;
-  grid-template-rows: .7rem 1fr 1.5rem .5rem;
-  grid-template-columns: 1fr 5rem .5rem;
+  grid-template-rows: 0.7rem 1fr 1.5rem 0.5rem;
+  grid-template-columns: 1fr 5rem 0.5rem;
   width: $room-component-width + $padding * 2;
   height: $room-component-height + $padding * 2;
   border: $border;
